[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-rustchain-tools"
version = "0.2.0"
description = "Read-only LangChain tools for RustChain — let any agent query the hardware-attested agent economy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Elyan Labs", email = "scottbphone12@gmail.com" }]
keywords = ["langchain", "rustchain", "agents", "depin", "blockchain", "proof-of-antiquity", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
# The async tools build on langchain-core + pydantic (BaseTool/args_schema),
# so the async extra pulls those in too — the documented
# `pip install "...[async]"` then `get_async_rustchain_tools()` path works on
# its own without also requiring the `langchain` extra.
async = ["httpx>=0.24", "langchain-core>=0.2"]
test = ["pytest>=7", "langchain-core>=0.2", "httpx>=0.24"]

[project.urls]
Homepage = "https://rustchain.org"
Repository = "https://github.com/Scottcjn/langchain-rustchain"
"Bug Tracker" = "https://github.com/Scottcjn/langchain-rustchain/issues"

[tool.setuptools.packages.find]
include = ["rustchain_langchain*"]
